added entity framework for postgres and a sample method
