# src/WebApp/Controllers/WeatherForecastController.cs
@@ -6,13 +6,17 @@
     using System;
     using System.Collections.Generic;
     using System.Linq;
+    using WebApp.Models;
 
-    [Authorize] // (Roles = "role1")
+  //  [Authorize] // (Roles = "role1")
     [ApiController]
     [ApiVersion("1.0")]
     [Route("/api/v{version:apiVersion}/weatherforecasts")]
     public class WeatherForecastController : ControllerBase
     {
+        DogsRepository _DogsRepository;
+
+
         private static readonly string[] Summaries = new[]
         {
             "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching"
@@ -20,13 +24,16 @@
 
         private readonly ILogger<WeatherForecastController> logger;
 
-        public WeatherForecastController(ILogger<WeatherForecastController> logger)
+        public WeatherForecastController(ILogger<WeatherForecastController> logger, DogsRepository dog_repo)
         {
             this.logger = logger;
+            _DogsRepository = dog_repo;
         }
 
+
         [HttpGet]
-        public IEnumerable<WeatherForecast> Get()
+        [Route("Getme")]
+        public IEnumerable<WeatherForecast> Getme()
         {
             this.logger.LogInformation("weather request");
 
@@ -39,5 +46,17 @@
             })
             .ToArray();
         }
+
+
+        [HttpGet]
+        [Route("GetDogs")]
+        public IEnumerable<Dog> GetDogs()
+        {
+            
+            return _DogsRepository.GetAllDogs();
+        }
+
+
+
     }
 }
