# src/WebApp/swagger.json
@@ -47,12 +47,12 @@
         ]
       }
     },
-    "/api/v1/weatherforecasts": {
+    "/api/v1/weatherforecasts/Getme": {
       "get": {
         "tags": [
           "WeatherForecast"
         ],
-        "operationId": "WeatherForecast_Get",
+        "operationId": "WeatherForecast_Getme",
         "responses": {
           "200": {
             "description": "",
@@ -66,19 +66,31 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
-        },
-        "security": [
-          {
-            "bearer": []
+        }
+      }
+    },
+    "/api/v1/weatherforecasts/GetDogs": {
+      "get": {
+        "tags": [
+          "WeatherForecast"
+        ],
+        "operationId": "WeatherForecast_GetDogs",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Dog"
+                  }
+                }
+              }
+            }
           }
-        ]
+        }
       }
     }
   },
@@ -101,6 +113,20 @@
             "format": "int32"
           },
           "summary": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "Dog": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
             "type": "string",
             "nullable": true
           }
